# orbit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml  release.yml  update.yml
configs/: hello-single.yml  mongo.yml  second.yml  testa.yml
docs/: README.md  api.md  configuration.md
examples/: README.md
examples/configs/: codel-scaling.yml  health-checks.yml  helloword.yml  helloworld-sidecar.yml  helloworld.yml  resource-limits.yml
examples/docker/infoapp/: Dockerfile  README.md  server.js
examples/helloworld-docker/: Dockerfile  package.json  server.js
src/: config.rs  container.rs  logger.rs  main.rs  metrics.rs  proxy.rs  rolling_update.rs  scale.rs  status.rs
src/api/: mod.rs  status.rs
src/config/: mod.rs  utils.rs  validate.rs
src/container/: mod.rs  rolling_update.rs  scale.rs  volumes.rs
src/container/health/: config.rs  mod.rs
src/container/runtimes/: docker.rs  mod.rs
src/container/scaling/: codel.rs  manager.rs  mod.rs
src/metrics/: mod.rs  volumes.rs
